--- a/forums/theme/imageset/imageset.cfg
+++ b/forums/theme/imageset/imageset.cfg
@@ -22,95 +22,95 @@ copyright = Coalition Gaming 2013
 version = 1.0
 
 # Images
-img_site_logo = site_logo.gif*52*139
+img_site_logo = site_logo.png*52*139
 img_poll_left =
 img_poll_center =
 img_poll_right =
 img_icon_friend =
 img_icon_foe =
 
-img_forum_link = forum_link.gif*27*27
-img_forum_read = forum_read.gif*27*27
-img_forum_read_locked = forum_read_locked.gif*27*27
-img_forum_read_subforum = forum_read_subforum.gif*27*27
-img_forum_unread = forum_unread.gif*27*27
-img_forum_unread_locked = forum_unread_locked.gif*27*27
-img_forum_unread_subforum = forum_unread_subforum.gif*27*27
+img_forum_link = flink.png*36*33
+img_forum_read = fread.png*36*33
+img_forum_read_locked = fread.png*36*33
+img_forum_read_subforum = fread.png*36*33
+img_forum_unread = funread.png*36*33
+img_forum_unread_locked = funreadlocked.png*36*33
+img_forum_unread_subforum = funreadsubforum.png*36*33
 
-img_topic_moved = topic_moved.gif*27*27
+img_topic_moved = moved.png*27*25
 
-img_topic_read = topic_read.gif*27*27
-img_topic_read_mine = topic_read_mine.gif*27*27
-img_topic_read_hot = topic_read_hot.gif*27*27
-img_topic_read_hot_mine = topic_read_hot_mine.gif*27*27
-img_topic_read_locked = topic_read_locked.gif*27*27
-img_topic_read_locked_mine = topic_read_locked_mine.gif*27*27
+img_topic_read = read.png*27*25
+img_topic_read_mine = read.png*27*25
+img_topic_read_hot = read.png*27*25
+img_topic_read_hot_mine = read.png*27*25
+img_topic_read_locked = readlocked.png*27*25
+img_topic_read_locked_mine = readlocked.png*27*25
 
-img_topic_unread = topic_unread.gif*27*27
-img_topic_unread_mine = topic_unread_mine.gif*27*27
-img_topic_unread_hot = topic_unread_hot.gif*27*27
-img_topic_unread_hot_mine = topic_unread_hot_mine.gif*27*27
-img_topic_unread_locked = topic_unread_locked.gif*27*27
-img_topic_unread_locked_mine = topic_unread_locked_mine.gif*27*27
+img_topic_unread = unread.png*27*25
+img_topic_unread_mine = unread.png*27*25
+img_topic_unread_hot = unreadhot.png*27*25
+img_topic_unread_hot_mine = unreadhot.png*27*25
+img_topic_unread_locked = unreadlocked.png*27*25
+img_topic_unread_locked_mine = unreadlocked.png*27*25
 
-img_sticky_read = sticky_read.gif*27*27
-img_sticky_read_mine = sticky_read_mine.gif*27*27
-img_sticky_read_locked = sticky_read_locked.gif*27*27
-img_sticky_read_locked_mine = sticky_read_locked_mine.gif*27*27
-img_sticky_unread = sticky_unread.gif*27*27
-img_sticky_unread_mine = sticky_unread_mine.gif*27*27
-img_sticky_unread_locked = sticky_unread_locked.gif*27*27
-img_sticky_unread_locked_mine = sticky_unread_locked_mine.gif*27*27
+img_sticky_read = sticky.png*27*25
+img_sticky_read_mine = sticky.png*27*25
+img_sticky_read_locked = stickylocked.png*27*25
+img_sticky_read_locked_mine = stickylocked.png*27*25
+img_sticky_unread = sticky.png*27*25
+img_sticky_unread_mine = sticky.png*27*25
+img_sticky_unread_locked = stickylocked.png*27*25
+img_sticky_unread_locked_mine = stickylocked.png*27*25
 
-img_announce_read = announce_read.gif*27*27
-img_announce_read_mine = announce_read_mine.gif*27*27
-img_announce_read_locked = announce_read_locked.gif*27*27
-img_announce_read_locked_mine = announce_read_locked_mine.gif*27*27
-img_announce_unread = announce_unread.gif*27*27
-img_announce_unread_mine = announce_unread_mine.gif*27*27
-img_announce_unread_locked = announce_unread_locked.gif*27*27
-img_announce_unread_locked_mine = announce_unread_locked_mine.gif*27*27
+img_announce_read = announce.png*27*25
+img_announce_read_mine = announce.png*27*25
+img_announce_read_locked = announcelocked.png*27*25
+img_announce_read_locked_mine = announcelocked.png*27*25
+img_announce_unread = announce.png*27*25
+img_announce_unread_mine = announce.png*27*25
+img_announce_unread_locked = announcelocked.png*27*25
+img_announce_unread_locked_mine = announcelocked_mine.png*27*25
 
-img_global_read = announce_read.gif*27*27
-img_global_read_mine = announce_read_mine.gif*27*27
-img_global_read_locked = announce_read_locked.gif*27*27
-img_global_read_locked_mine = announce_read_locked_mine.gif*27*27
-img_global_unread = announce_unread.gif*27*27
-img_global_unread_mine = announce_unread_mine.gif*27*27
-img_global_unread_locked = announce_unread_locked.gif*27*27
-img_global_unread_locked_mine = announce_unread_locked_mine.gif*27*27
+img_global_read = global.png*27*25
+img_global_read_mine = global.png*27*25
+img_global_read_locked = globallocked.png*27*25
+img_global_read_locked_mine = globallocked.png*27*25
+img_global_unread = global.png*27*25
+img_global_unread_mine = global.png*27*25
+img_global_unread_locked = globallocked.png*27*25
+img_global_unread_locked_mine = globallocked.png*27*25
 
-img_subforum_read = subforum_read.gif*9*11
-img_subforum_unread = subforum_unread.gif*9*11
+img_subforum_read = subforum_read.png*9*11
+img_subforum_unread = subforum_unread.png*9*11
 
-img_pm_read = topic_read.gif*27*27
-img_pm_unread = topic_unread.gif*27*27
+img_pm_read = topic_read.png*27*25
+img_pm_unread = topic_unread.png*27*25
 
-img_icon_back_top = icon_back_top.gif*11*11
+img_icon_back_top = icon_back_top.png*11*11
 
-img_icon_contact_aim = icon_contact_aim.gif*20*20
-img_icon_contact_email = icon_contact_email.gif*20*20
-img_icon_contact_icq = icon_contact_icq.gif*20*20
-img_icon_contact_jabber = icon_contact_jabber.gif*20*20
-img_icon_contact_msnm = icon_contact_msnm.gif*20*20
+img_icon_contact_aim = icon_contact_aim.png*20*20
+img_icon_contact_email = icon_contact_email.png*20*20
+img_icon_contact_icq = icon_contact_icq.png*20*20
+img_icon_contact_jabber = icon_contact_jabber.png*20*20
+img_icon_contact_msnm = icon_contact_msnm.png*20*20
 
-img_icon_contact_www = icon_contact_www.gif*20*20
-img_icon_contact_yahoo = icon_contact_yahoo.gif*20*20
+img_icon_contact_www = icon_contact_www.png*20*20
+img_icon_contact_yahoo = icon_contact_yahoo.png*20*20
 
-img_icon_post_delete = icon_post_delete.gif*20*20
+img_icon_post_delete = icon_post_delete.png*20*20
 
-img_icon_post_info = icon_post_info.gif*20*20
+img_icon_post_info = icon_post_info.png*20*20
 
-img_icon_post_report = icon_post_report.gif*20*20
-img_icon_post_target = icon_post_target.gif*9*11
-img_icon_post_target_unread = icon_post_target_unread.gif*9*11
+img_icon_post_report = icon_post_report.png*20*20
+img_icon_post_target = icon_post_target.png*9*11
+img_icon_post_target_unread = icon_post_target_unread.png*9*11
 
-img_icon_topic_attach = icon_topic_attach.gif*10*7
-img_icon_topic_latest = icon_topic_latest.gif*9*11
-img_icon_topic_newest = icon_topic_newest.gif*9*11
-img_icon_topic_reported = icon_topic_reported.gif*14*16
-img_icon_topic_unapproved = icon_topic_unapproved.gif*14*16
+img_icon_topic_attach = icon_topic_attach.png*10*7
+img_icon_topic_latest = icon_topic_latest.png*9*11
+img_icon_topic_newest = icon_topic_newest.png*9*11
+img_icon_topic_reported = icon_topic_reported.png*14*16
+img_icon_topic_unapproved = icon_topic_unapproved.png*14*16
 
 img_icon_user_profile =
 
-img_icon_user_warn = icon_user_warn.gif*20*20
+img_icon_user_warn = icon_user_warn.png*20*20
